--- a/css/styles.css
+++ b/css/styles.css
@@ -317,7 +317,7 @@ textarea {
   /* 1 */
   font-variation-settings: inherit;
   /* 1 */
-  font-size: 100%;
+  font-size: 18px;
   /* 1 */
   font-weight: inherit;
   /* 1 */
@@ -871,7 +871,7 @@ video {
   }
 }
 
-@font-face {
+/* @font-face {
   font-family: "Sans-Regular";
 
   src: url(../fonts/Sans-Regular.ttf);
@@ -893,7 +893,7 @@ video {
   font-family: "Sans-Bold";
 
   src: url(../fonts/Sans-Bold.ttf);
-}
+} */
 
 body {
   display: flex;
@@ -1207,7 +1207,7 @@ body main {
     position: absolute;
   }
   button {
-    left: 0.5rem;
+    left: 19.5rem;
   }
   button {
     --tw-text-opacity: 1;
@@ -1215,6 +1215,10 @@ body main {
   }
 }
 
+/* 
+.search-card > button {
+ margin-left: 87%;
+} */
 .container {
   section.content {
     margin-top: 2.5rem;
@@ -1246,7 +1250,7 @@ body main {
       position: absolute;
     }
     h1::before {
-      right: 0px;
+      left: 65px;
     }
     h1::before {
       height: 0.375rem;
